--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "angular-animations": "0.0.10",
+    "classlist.js": "^1.1.20150312",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
