--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material-moment-adapter": "^8.2.0",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
+    "@angular/pwa": "^0.803.14",
     "@angular/router": "~8.0.1",
+    "@angular/service-worker": "~8.0.1",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
