--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "compodoc": "npx compodoc -p tsconfig.app.json",
-    "compodoc-server": "npx compodoc -p tsconfig.app.json -s"
+    "compodoc-server": "npx compodoc -p tsconfig.app.json -s",
+    "build-upload": "ng build --prod --base-href='#' && ngh --dir=dist/documentacion-blanca-javi",
+    "upload-build": "ngh --dir=dist/documentacion-blanca-javi"
   },
   "private": true,
   "dependencies": {
