--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "e2e": "ng e2e",
     "compodoc": "npx compodoc -p tsconfig.app.json",
     "compodoc-server": "npx compodoc -p tsconfig.app.json -s",
-    "build-upload": "ng build --prod --base-href='#' && ngh --dir=dist/documentacion-blanca-javi",
-    "upload-build": "ngh --dir=dist/documentacion-blanca-javi"
+    "compodoc-server-open": "npx compodoc -p tsconfig.app.json -s -o",
+    "build-upload": "ng build --prod --base-href='#' && ngh --dir=dist/documentacion-blanca-javi && start https://javiggpecas.github.io/documentacionBlancaJavi/",
+    "upload-build": "ngh --dir=dist/documentacion-blanca-javi && start https://javiggpecas.github.io/documentacionBlancaJavi/"
   },
   "private": true,
   "dependencies": {
@@ -46,6 +47,7 @@
     "@angular/pwa": "^0.803.14",
     "@angular/router": "~8.2.12",
     "@angular/service-worker": "~8.2.12",
+    "@compodoc/compodoc": "^1.1.11",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
