--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angular-animations": "0.0.10",
     "classlist.js": "^1.1.20150312",
     "moment": "^2.24.0",
-    "rxjs": "~6.5.3",
+    "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
